fdo#72413: Fix O(n^2) in inserting SearchResults' items.

Thanks to moggi, who pointed to this, should be documented somewhere.

Change-Id: I96ba2cca930e4b784a825987ea19e4fc9aacb6d6